Fix: Improve responsive design on smaller screens

--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -52,7 +52,7 @@
     }
 
     img:nth-of-type(2) {
-        top: 0;
+        top: -82px;
         right: -35px;
         z-index: 0;
     }
